fix: prevent grid container items from overflowing on very small screens

--- a/style.css
+++ b/style.css
@@ -510,6 +510,14 @@ span[popovertarget] {
     padding: 0px;
   }
 
+  .grid-container {
+    gap: 3px 8px;
+  }
+
+  .grid-container .item.large {
+    font-size: larger;
+  }
+
   main .point {
     gap: 16px;
     padding-bottom: 24px;
